--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://root:4QHgSwuuT7kbjMoLiNYU6lmg@alfie.iran.liara.ir:32741/my-app?authSource=admin
+MONGODB_URI=mongodb://root:XgZDNehDUfuUI5K9nVIoPKrd@stagingnode.liara.cloud:31993/my-app?authSource=admin
