improve api/register.js

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 MONGODB_URI=mongodb://root:XgZDNehDUfuUI5K9nVIoPKrd@stagingnode.liara.cloud:31993/my-app?authSource=admin
+
+EMAIL_HOST=smtp.c1.liara.email
+EMAIL_PORT=587
+EMAIL_USER=relaxed_edison_ddmlfo
+EMAIL_PASS=7eb29b13-375b-429c-949d-09a6c0affdcc
+EMAIL_FROM=info@alinajmabadi.ir
