--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "mongoose": "^8.0.2",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.3",
     "nodemailer": "^6.9.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
