--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^8.0.2",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
