--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-EMAIL_HOST=smtp.c1.liara.email
-EMAIL_USER=
-EMAIL_PASS=
-EMAIL_FROM=
+MAIL_HOST=smtp.c1.liara.email
+MAIL_PORT=587 # or 465 for tls 
+MAIL_USER=
+MAIL_PASSWORD=
+MAIL_FROM=
