--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-email",
+  "name": "send-email",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "fs": "^0.0.1-security",
-    "next": "14.0.4",
-    "nodemailer": "^6.9.8",
+    "next": "14.2.13",
+    "nodemailer": "^6.9.15",
     "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.2.13"
   }
 }
